syntax = "proto3";
package kratos.api;

option go_package = "access/internal/conf;conf";

import "google/protobuf/duration.proto";

// 默认配置config文件
message Bootstrap {
  Server server = 1;
  Data data = 2;
  Trace trace = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string pass = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Database database = 1;
  Redis redis = 2;
}

message Trace {
  string endpoint = 1;
}

// 配置config文件
message Registry {
  Consul consul = 1;
}

message Consul {
  string address = 1;
  string scheme = 2;
}